[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ball.png" type="Texture" id=1]
[ext_resource path="res://scripts/controller.gd" type="Script" id=3]

[node name="ctrl_players_ui" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_horizontal_guides_": [ 40.3542 ],
"_edit_use_anchors_": false
}

[node name="controller" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="balls" type="Control" parent="controller"]
margin_left = 580.0
margin_top = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="available1" type="Sprite" parent="controller/balls"]
position = Vector2( 110, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="available2" type="Sprite" parent="controller/balls"]
position = Vector2( 140, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="available3" type="Sprite" parent="controller/balls"]
position = Vector2( 170, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="available4" type="Sprite" parent="controller/balls"]
position = Vector2( 200, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
